// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPageModels > crop marks never cross another tile’s trim+bleed box (snapshot of a tight 2-up) 1`] = `
{
  "cropMarks": [
    {
      "x1": 10,
      "x2": 6,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 14,
      "x2": 14,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 102,
      "x2": 102,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 102,
      "x2": 102,
      "y1": 78,
      "y2": 82,
    },
    {
      "x1": 10,
      "x2": 6,
      "y1": 74,
      "y2": 74,
    },
    {
      "x1": 14,
      "x2": 14,
      "y1": 78,
      "y2": 82,
    },
    {
      "x1": 108,
      "x2": 108,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 200,
      "x2": 204,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 196,
      "x2": 196,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 200,
      "x2": 204,
      "y1": 74,
      "y2": 74,
    },
    {
      "x1": 196,
      "x2": 196,
      "y1": 78,
      "y2": 82,
    },
    {
      "x1": 108,
      "x2": 108,
      "y1": 78,
      "y2": 82,
    },
  ],
  "groups": [],
  "index": 0,
  "safeArea": {
    "h": 287,
    "w": 200,
    "x": 5,
    "y": 5,
  },
  "size": {
    "h": 297,
    "w": 210,
  },
  "tiles": [
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 60,
        "w": 88,
        "x": 14,
        "y": 14,
      },
      "version": "original",
    },
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "b",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 60,
        "w": 88,
        "x": 108,
        "y": 14,
      },
      "version": "original",
    },
  ],
}
`;

exports[`study versions (M2-R4) > a 3-version turned group with bleed and crop marks > matches the snapshot 1`] = `
{
  "cropMarks": [
    {
      "x1": 9,
      "x2": 5,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 13,
      "x2": 13,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 57,
      "x2": 57,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 57,
      "x2": 57,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 9,
      "x2": 5,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 13,
      "x2": 13,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 63,
      "x2": 63,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 107,
      "x2": 107,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 107,
      "x2": 107,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 63,
      "x2": 63,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 113,
      "x2": 113,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 161,
      "x2": 165,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 157,
      "x2": 157,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 161,
      "x2": 165,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 157,
      "x2": 157,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 113,
      "x2": 113,
      "y1": 84,
      "y2": 88,
    },
  ],
  "groups": [
    {
      "block": {
        "h": 66,
        "w": 144,
        "x": 13,
        "y": 14,
      },
      "imageId": "a",
    },
  ],
  "index": 0,
  "safeArea": {
    "h": 287,
    "w": 200,
    "x": 5,
    "y": 5,
  },
  "size": {
    "h": 297,
    "w": 210,
  },
  "tiles": [
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 90,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 66,
        "w": 44,
        "x": 13,
        "y": 14,
      },
      "version": "original",
    },
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 90,
      "scaledToFit": false,
      "study": {
        "blurPct": 40,
        "values": null,
      },
      "trim": {
        "h": 66,
        "w": 44,
        "x": 63,
        "y": 14,
      },
      "version": "blurred",
    },
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 90,
      "scaledToFit": false,
      "study": {
        "blurPct": null,
        "values": {
          "count": 5,
          "hue": 55,
          "neutral": false,
        },
      },
      "trim": {
        "h": 66,
        "w": 44,
        "x": 113,
        "y": 14,
      },
      "version": "values",
    },
  ],
}
`;
